--- a/gb/1/2/7/n44534.md
+++ b/gb/1/2/7/n44534.md
@@ -9,69 +9,67 @@
 <p>张俊雄说，海洋污染法是去年 11 月 1 日公布实行，相关单位的应变处理经验确有<br />不足，为因应未来类似事件发生，成立海洋事件污染处理小组，包括环保署、内政<br />部、国防部、交通部、海巡署、农委会、相关县市政府，由环保署长林俊义担任召<br />集人。 </p>
 <p>环保署副署长李界木表示，环保署介入这次海洋污染时间被外界质疑，主要是因为<br />事件刚发生时，船公司为了经费问题，希望由投保的保险公司出面清除，直到后来<br />船公司也无能力解决，环保署才介入，当地由于地形、天候不良，专家评估要三个<br />月才能清除完成，环保署已要求一个月内完成清除。李界木没有说明环保署介入时<br />间，有无延误，或者有无行政疏失。 </p>
 <p>环保署在院会提出的报告中指出，这次海洋污染未来有待克服的困难，包括损害赔<br />偿、寻求有效设备克服地形困难清除污染、动员人力清除，寻求克服天候困难解决<br />海上搁浅船体、寻求空中勘察评估最有效方案。 </p>
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=44030 target=_blank class=ltnn>全世界环境部长聚集内罗毕 商讨环保大计</a> (2/6/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=43738 target=_blank class=ltnn>全国总动员灭鼠除汉疫</a> (2/5/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=43550 target=_blank class=ltnn>广西一局长为面子大闹收费站 １个月后仍未受到处理 </a> (2/5/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=43368 target=_blank class=ltnn>四公司跨境倾泻毒泥</a> (2/4/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=42858 target=_blank class=ltnn>世界百位环保部长下周将参加全球环保论坛</a> (2/3/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=42792 target=_blank class=ltnn>运输部长欲加速新机场跑道建设</a> (2/3/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=42236 target=_blank class=ltnn><ahref=http://www3.epochtimes.com/news/epochnews/main/2.md#1><font color=blue>中国</font></A>环保 全球122个国家排名107位 </a> (2/1/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=41566 target=_blank class=ltnn>台北环保局检测校园饮用水 十一所学校不合规定 </a> (1/31/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=41412 target=_blank class=ltnn><ahref=http://www.epochtimes.com/news/epochnews/news/Focus.asp?Focus_ID=702><font color=blue>布什</font></A>内政、环保部长任命人顺利过关</a> (1/31/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=41307 target=_blank class=ltnn>新研究显示贪污严重的中共环保表现极差</a> (1/30/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=41245 target=_blank class=ltnn>唯恐汉他病毒蔓延<ahref=http://www3.epochtimes.com/news/epochnews/main/3.md#1><font color=blue>台湾</font></A>全民大灭鼠</a> (1/30/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=40967 target=_blank class=ltnn>法义两国协议造高铁 示威民众抗议</a> (1/30/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=40497 target=_blank class=ltnn>综述: 反核男子立院前引火自焚 </a> (1/29/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=40492 target=_blank class=ltnn>绿色和平组织阻止基因改造大豆在丹麦港口停泊</a> (1/29/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=40442 target=_blank class=ltnn>“坚持非核家园”,一男子引火自焚</a> (1/29/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=39728 target=_blank class=ltnn>奥尼尔赔面子又赔钱</a> (1/26/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=39657 target=_blank class=ltnn>杜绝汉它病毒　花莲赶紧灭鼠运动</a> (1/26/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=39238 target=_blank class=ltnn>卫生交通部长轻松过关 内政劳工环保今临考验</a> (1/25/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=38425 target=_blank class=ltnn>温室效应比所预料的更严重 </a> (1/23/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=38021 target=_blank class=ltnn>世贸组织候任总干事呼吁亚洲国家重视环保</a> (1/22/2001)<br />
-<hr>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<B><FONTCOLOR=red>相关文章</FONT></B><br /> &nbsp;&nbsp;&nbsp;&nbsp; </p>
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=43287 target=_blank class=ltnn>千吨油污染台南海域</a> (2/4/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=43268 target=_blank class=ltnn>鱼蟹困油中 垦丁海陆同步除污</a> (2/4/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=40375 target=_blank class=ltnn>印度: 地震造成大面积海域原油污染</a> (1/28/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=40288 target=_blank class=ltnn>大地震过后印度附近海域出现了大规模原油污染</a> (1/28/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=38582 target=_blank class=ltnn>原油泄漏 加拉帕戈斯群岛进入紧急状态</a> (1/23/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=38524 target=_blank class=ltnn>教科文组织呼吁国际整治加岛油污危机</a> (1/23/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=27566 target=_blank class=ltnn>美公布减少汽车柴油污染的新规定</a> (12/28/2000)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=24568 target=_blank class=ltnn>新“毒米”踏足深圳 无油污不透明更难辨别</a> (12/14/2000)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=10580 target=_blank class=ltnn>打捞江底沉船 清除漏油污染 珠江终消心头大患</a> (11/20/2000)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=10161 target=_blank class=ltnn>珠江口沉没油船打捞推迟 重油油污逼近深圳水域</a> (11/17/2000)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=3837 target=_blank class=ltnn>油轮搁浅漏出7000公吨原油新加坡紧急防污</a> (10/4/2000)<br />
-	
+<p>????<b><font color="red">相关文章</font></b><br /> ???? </p>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=44030" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">全世界环境部长聚集内罗毕 商讨环保大计</a> (2/6/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=43738" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">全国总动员灭鼠除汉疫</a> (2/5/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=43550" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">广西一局长为面子大闹收费站 １个月后仍未受到处理 </a> (2/5/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=43368" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">四公司跨境倾泻毒泥</a> (2/4/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=42858" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">世界百位环保部长下周将参加全球环保论坛</a> (2/3/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=42792" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">运输部长欲加速新机场跑道建设</a> (2/3/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=42236" target="_blank" class="ltnn" rel="nofollow noopener noreferrer"></a><font color="blue">中国</font>环保 全球122个国家排名107位(2/1/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=41566" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">台北环保局检测校园饮用水 十一所学校不合规定 </a> (1/31/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=41412" target="_blank" class="ltnn" rel="nofollow noopener noreferrer"></a><font color="blue">布什</font>内政、环保部长任命人顺利过关 (1/31/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=41307" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">新研究显示贪污严重的中共环保表现极差</a> (1/30/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=41245" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">唯恐汉他病毒蔓延</a><font color="blue">台湾</font>全民大灭鼠 (1/30/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=40967" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">法义两国协议造高铁 示威民众抗议</a> (1/30/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=40497" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">综述: 反核男子立院前引火自焚 </a> (1/29/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=40492" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">绿色和平组织阻止基因改造大豆在丹麦港口停泊</a> (1/29/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=40442" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">“坚持非核家园”,一男子引火自焚</a> (1/29/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=39728" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">奥尼尔赔面子又赔钱</a> (1/26/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=39657" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">杜绝汉它病毒　花莲赶紧灭鼠运动</a> (1/26/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=39238" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">卫生交通部长轻松过关 内政劳工环保今临考验</a> (1/25/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=38425" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">温室效应比所预料的更严重 </a> (1/23/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=38021" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">世贸组织候任总干事呼吁亚洲国家重视环保</a> (1/22/2001)<br />
+</li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=43287" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">千吨油污染台南海域</a> (2/4/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=43268" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">鱼蟹困油中 垦丁海陆同步除污</a> (2/4/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=40375" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">印度: 地震造成大面积海域原油污染</a> (1/28/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=40288" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">大地震过后印度附近海域出现了大规模原油污染</a> (1/28/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=38582" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">原油泄漏 加拉帕戈斯群岛进入紧急状态</a> (1/23/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=38524" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">教科文组织呼吁国际整治加岛油污危机</a> (1/23/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=27566" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美公布减少汽车柴油污染的新规定</a> (12/28/2000)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=24568" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">新“毒米”踏足深圳 无油污不透明更难辨别</a> (12/14/2000)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=10580" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">打捞江底沉船 清除漏油污染 珠江终消心头大患</a> (11/20/2000)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=10161" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">珠江口沉没油船打捞推迟 重油油污逼近深圳水域</a> (11/17/2000)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=3837" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">油轮搁浅漏出7000公吨原油新加坡紧急防污</a> (10/4/2000)</li>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/22/n38021.md#1">世贸组织候任总干事呼吁亚洲国家重视环保</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/23/n38425.md#1">温室效应比所预料的更严重</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/23/n38524.md#1">教科文组织呼吁国际整治加岛油污危机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/23/n38582.md#1">原油泄漏   加拉帕戈斯群岛进入紧急状态</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/9/n9823637.md#1" target="_blank">苦胆：“十月革命一声炮响”放的是空炮</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/26/n9771543.md#1" target="_blank">中共抹黑李洪志先生“敛财”真相</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/24/n10806244.md#1" target="_blank">林辉：当炮灰还成“叛徒”王成原型人生尽毁</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/6/n11571997.md#1" target="_blank">他们为我们的生活带来光明（1）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14285873.md#1">【周末大V谈】社会的悲剧？还是个人的问题？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/14/n14180510.md#1">【古韵流芳】李商隐叹相思 以无题诗道心曲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284762.md#1">【新闻五人行】北京侵台“彩排”苦了这国！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285173.md#1">岳阳官方堵洞庭湖溃堤失败 “堵嘴”文件曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285003.md#1">洞庭湖决堤 洪水漫过房顶 村民连夜逃难</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284404.md#1">孙艺真：结婚生子后开启演员生涯第二篇章</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285219.md#1">只用微波炉 就能煮好玉米棒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286069.md#1">为何飞机从起点到终点的飞行路线非一直线？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/14/n14250364.md#1">你吃对东西了吗？专家揭七大防癌饮食</a></li>
-<hr>
-<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/1/2/7/n44534.htm">行政院不满环保署延误处理 垦丁油污事件</a></p><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647110.md#1">奇异救赎——这世上另一个我</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651624.md#1">【佳音时刻】中共官场太荒诞 问责不误升官</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651982.md#1">【重播】泰国联合工作组开记者会 泰柬边境局势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650041.md#1">分析：北京“稀土武器”效力正快速下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650517.md#1">相声演员郭德纲表演《艺高人胆小》遭约谈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650551.md#1">日军机遭中共歼-15雷达照射 高市早苗回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/1/2/7/n44534.htm">行政院不满环保署延误处理 垦丁油污事件</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/1/2/7/n44534.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
